Fixed Redirect Pages
also added a comment to images/index.html

--- a/images/index.html
+++ b/images/index.html
@@ -9,3 +9,7 @@
   <body>
   </body>
 </html>  
+<!--
+This requires JavaScript.
+The redirect page at /pages/index.html works in cases when the client does not have JavaScript enabled.
+--!>
